--- a/INTROHTML_website/index.html
+++ b/INTROHTML_website/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
-    <h1>Introduction</h1>
+    <style>
+        .index{
+            text-align: center; 
+        }
+    </style>
+    <div class = "index">
+    <h1>Homepage</h1>
     <h2><p></p><p>About Me</p></h2>
-    <p> Hello everyone, my name is Sammy Hu, 17 years old and a senior at Brooklyn Tech.</p>
-    <p> I'm learning web development in Mr. Irimina class on odd days periods 7 and 8.</p>
+    <p> Hello everyone, my name is Sammy Hu, 17 years old and a senior at Brooklyn Tech. I'm learning web development in Mr. Irimina class on odd days periods 7 and 8.</p>
     <h3><p>You can learn more about me through:</p></h3>
-    <p><a href = "favorites.html"> Favorites</a></p>
-    <p><a href = "skills"> Skills</a></p>
-    <p><a href = "spots.html"> Spots</a></p>
+    <p><a href = "favorites.html" > Favorites</a></p>
+    <p><a href = "skills.html"> How to</a></p>
+    <p><a href = "spots.html"> NYC</a></p>
+    <p>Here's the requirement of this project</p>
+    </div>
+    <img src="Images/Requirements.jpg" alt="Requirements">
+
 </body>
 </html>
