--- a/INTROHTML_website/index.html
+++ b/INTROHTML_website/index.html
@@ -5,24 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-</head>
-<body>
     <style>
         .index{
             text-align: center; 
         }
     </style>
+</head>
+<body>
     <div class = "index">
     <h1>Homepage</h1>
-    <h2><p></p><p>About Me</p></h2>
-    <p> Hello everyone, my name is Sammy Hu, 17 years old and a senior at Brooklyn Tech. I'm learning web development in Mr. Irimina class on odd days periods 7 and 8.</p>
-    <h3><p>You can learn more about me through:</p></h3>
+    <h2>About Me</h2>
+    <p> Hello everyone, my name is Sammy H., a senior at Brooklyn Tech. I'm learning web development in Mr. Irimina class on odd days periods 7 and 8.</p>
+    <h3>You can learn more about me through:</h3>
     <p><a href = "favorites.html" > Favorites</a></p>
     <p><a href = "skills.html"> How to</a></p>
     <p><a href = "spots.html"> NYC</a></p>
     <p>Here's the requirement of this project</p>
     </div>
     <img src="Images/Requirements.jpg" alt="Requirements">
-
+    <footer>
+        <img src="Images/IndexMarkup.jpg" alt="Markup">
+        &copy; Copyright Sammy
+    </footer>
 </body>
 </html>
