--- a/INTROHTML_website/favorites.html
+++ b/INTROHTML_website/favorites.html
@@ -5,28 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorites</title>
-</head>
     <style>
         .Heading {
            text-align: center; 
         }
+        .body {
+            margin-left: auto;
+            margin-right: auto;
+            width: 16cm;
+        }
+        .links {
+            text-align: center;
+        }
 
     </style>
+</head>
 <body>
     <div class = "Heading">
     <h1>Favorites</h1>
     </div>
-    <p>I'm interested in math and computer science. I think I'm a logical person therefore I like things 
-        that have a correct answer instead of like having a set of standards for the right answer but 
-        there isn't one correct answer. My hobbies are gaming and coding which I spent a lot of time on
-        to create projects. I also enjoy listening to music, if you by chance saw me on the subway there
-        wouldn't be a single time that I'm not wearing my earbuds.
+    <div class = "body">
+    <p>I'm interested in math and computer science. I'm a logical person therefore I like to solve
+        problems that have like an exact answer rather than problems that have a rubric for the answer
+        but there isn't one direct answer which I found annoying. I also enjoy listening to music, if you 
+        by chance saw me on the subway there wouldn't be a single time that I'm not wearing my earbuds.
     </p>
-    <p><h2>Other pages:</h2></p>
+    </div>
+    <div class="links">
+    <h2>Other pages:</h2>
     <p><a href = "index.html"> Home</a></p>
     <p><a href = "skills.html"> How to</a></p>
     <p><a href = "spots.html"> NYC</a></p>
+    </div>
     <video controls src = "Videos/Sea.mp4"></video>
     <audio controls src = "Videos/Sea.mp4"></audio>
+    <!--requirement of a comment-->
+    <footer>
+        <img src="Images/Favorite.jpg" alt="Markup">
+        &copy; Copyright Sammy
+
+    </footer>
 </body>
 </html>
