--- a/INTROHTML_website/favorites.html
+++ b/INTROHTML_website/favorites.html
@@ -33,9 +33,9 @@
     </div>
     <div class="links">
     <h2>Other pages:</h2>
-    <p><a href = "index.html"> Home</a></p>
-    <p><a href = "skills.html"> How to</a></p>
-    <p><a href = "spots.html"> NYC</a></p>
+    <p><a href = "index.html"> Homepage</a></p>
+    <p><a href = "skills.html"> Skills</a></p>
+    <p><a href = "spots.html"> Spots</a></p>
     </div>
     <video controls src = "Videos/Sea.mp4"></video>
     <audio controls src = "Videos/Sea.mp4"></audio>
