--- a/INTROHTML_website/skills.html
+++ b/INTROHTML_website/skills.html
@@ -68,9 +68,9 @@
   </table></div>
   <div class="links">
     <h2>Other pages:</h2>
-    <p><a href = "index.html"> Home</a></p>
-    <p><a href = "skills.html"> How to</a></p>
-    <p><a href = "spots.html"> NYC</a></p>
+    <p><a href = "index.html"> Homepage</a></p>
+    <p><a href = "favorites.html"> About</a></p>
+    <p><a href = "spots.html"> Spots</a></p>
     </div>
     <footer>
         <img src="Images/Skill.jpg" alt="Markup">
