--- a/INTROHTML_website/spots.html
+++ b/INTROHTML_website/spots.html
@@ -42,9 +42,9 @@
     </div>
     <div class="links">
     <h2>Other pages:</h2>
-    <p><a href = "index.html"> Home</a></p>
-    <p><a href = "skills.html"> How to</a></p>
-    <p><a href = "spots.html"> NYC</a></p>
+    <p><a href = "index.html"> Homepage</a></p>
+    <p><a href = "skills.html"> Skills</a></p>
+    <p><a href = "favorites.html"> About</a></p>
     </div>
     <footer>
         <img src="Images/Markup.jpg" alt="Markup">
