--- a/INTROHTML_website/index.html
+++ b/INTROHTML_website/index.html
@@ -17,9 +17,9 @@
     <h2>About Me</h2>
     <p> Hello everyone, my name is Sammy H., a senior at Brooklyn Tech. I'm learning web development in Mr. Irimina class on odd days periods 7 and 8.</p>
     <h3>You can learn more about me through:</h3>
-    <p><a href = "favorites.html" > Favorites</a></p>
-    <p><a href = "skills.html"> How to</a></p>
-    <p><a href = "spots.html"> NYC</a></p>
+    <p><a href = "favorites.html" > About</a></p>
+    <p><a href = "skills.html"> Skills</a></p>
+    <p><a href = "spots.html"> Spots</a></p>
     <p>Here's the requirement of this project</p>
     </div>
     <img src="Images/Requirements.jpg" alt="Requirements">
